# streamdeck-magierdinge

./: .gitignore  .gitmodules  pyproject.toml
streamdeck_magierdinge/: __main__.py  config.py  icon_loader.py  test_homeassistant.py  test_icon_loader.py  ux_ui.py
