[tool.poetry]
name = "streamdeck-magierdinge"
version = "0.1.0"
description = ""
authors = ["RincewindWizzard <git@magierdinge.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamdeck = "^0.9.5"
pillow = "^10.4.0"
cairosvg = "^2.7.1"
python-box = "^7.2.0"
requests = "^2.32.3"
homeassistant-api = "^4.2.2.post2"
colour = "^0.1.5"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
